# mmc-mailbox

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  mmcctrld.c  mmcctrld.service  mmcinfo.c  mmcmb.c
doc/: mmc-fpga-data-interface.md  mmc-fpga-data-interface.ods  mmc-mailbox.drawio
mmcmb/: fpga_mailbox_layout.h  mmcmb.h  mmcmb.hpp
